--- a/apps/core/templates/core/footer.html
+++ b/apps/core/templates/core/footer.html
@@ -14,23 +14,21 @@
 <div id="footer">
     <div class="footer-section">
         <ul class="footer-ul">
-            <h1>Meny</h1>
+            <h1>Raske Linker</h1>
             <li class="footer-li">
-                <a href="/">Hjemme</a>
-                <a href="/">Kundeservice</a>
+                <a href="/">Sektorer</a>
+                <a href="/">Blogg</a>
                 <a href="/">Om oss</a>
                 <a href="/">Prosjekter</a>
-                <a href="/">Anmeldelser</a>
+                <a href="/">Forum</a>
             </li>
         </ul>
         <ul class="footer-ul">
-            <h1>Priser</h1>
+            <h1>Kundeservice</h1>
             <li class="footer-li">
-                <a href="/">Ecommerce</a>
-                <a href="/">Blog</a>
-                <a href="/">Portofolio</a>
-                <a href="/">Personal</a>
-                <a href="/">Business</a>
+                <a href="/">Kontakt Oss</a>
+                <a href="/">Nettside Endringer</a>
+                <a href="/">Språkene</a>
             </li>
         </ul>
     </div>
