--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -349,7 +349,7 @@
   background: white;
   width: 100%;
   height: auto;
-  margin-top: 5px;
+  margin-top: 8px;
   padding: 25px;
 }
 
@@ -510,13 +510,40 @@
   background: #007be0;
   color: white;
   padding: 10px 20px;
-  border-radius: 4px;
   text-align: center;
+  right: 16px;
+  cursor: pointer;
+  color: black;
+  text-align: center;
+  border-radius: 15px;
+  -webkit-transition: .2s;
+  transition: .2s;
+  font-size: 14px;
+  border-radius: 4px;
+  text-decoration: none;
+  background: white;
+  border: 2px solid black;
+  font-weight: 600;
+}
+
+.edit .webiste-edit-action a:hover {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
+}
+
+.edit .webiste-edit-action a:focus {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
+}
+
+.edit .webiste-edit-action a:active {
+  -webkit-filter: brightness(85%);
+          filter: brightness(85%);
 }
 
 .edit img {
-  -webkit-transform: translateY(90px) translateX(-30px);
-          transform: translateY(90px) translateX(-30px);
+  -webkit-transform: translateY(105px) translateX(-30px);
+          transform: translateY(105px) translateX(-30px);
   width: 120%;
   max-width: 400px;
   -o-object-fit: contain;
@@ -528,7 +555,7 @@
   background: white;
   width: 100%;
   height: auto;
-  margin-top: 100px;
+  margin-top: 120px;
   padding: 25px;
   position: relative;
 }
@@ -552,7 +579,7 @@
   border: none;
   outline: none;
   border-radius: 12px;
-  padding-bottom: 20px;
+  padding-bottom: 50px;
   border: 2px solid #007be056;
 }
 
@@ -571,6 +598,7 @@
   font-size: 13px;
   -webkit-transform: translateY(30px);
           transform: translateY(30px);
+  font-weight: 800;
 }
 
 .prices .content .product-section .card .included {
@@ -600,7 +628,7 @@
 .prices .content .product-section .card .included ul li::before {
   content: "\2022";
   /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: #1cd31c;
+  color: #007be0;
   /* Change the color */
   font-weight: bold;
   /* If you want it to be bold */
@@ -611,154 +639,60 @@
 }
 
 .prices .content .product-section .card .product-actions {
-  -webkit-transform: translateY(10px) translateX(120px);
-          transform: translateY(10px) translateX(120px);
+  -webkit-transform: translateY(30px) translateX(0);
+          transform: translateY(30px) translateX(0);
 }
 
 .prices .content .product-section .card .product-actions a {
-  color: #1cd31c;
-  font-size: 25px;
-}
-
-.sites {
-  background: transparent;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: left;
-}
-
-.sites h1.heading {
-  padding-left: 8px;
-  margin-bottom: 15px;
-  margin-top: 10px;
-  width: 100%;
-  font-family: 'Lato', sans-serif;
-  color: black;
-  font-size: 24px;
-}
-
-.sites .product-flex-section {
+  border-radius: 4px;
+  padding: 13px 10px;
+  font-size: 14px;
+  color: white;
+  font-weight: 600;
+  margin: 2px auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border: 2px solid transparent;
+  text-decoration: none;
+  background: #072546;
+  width: 55%;
+  max-width: 250px;
 }
 
-.sites .product-flex-section .card {
-  margin: 5px 5px;
+.prices .content .product-section .card .product-actions a i {
+  -webkit-transform: translateX(18px) translateY(2px);
+          transform: translateX(18px) translateY(2px);
+}
+
+.our-story {
+  background: #007be0;
+  width: 100%;
   height: auto;
-  width: 45%;
-  max-width: 415px;
-  border: none;
-  outline: none;
-  border-radius: 7px;
-  padding-bottom: 20px;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.082);
-          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.082);
-}
-
-.sites .product-flex-section .card .product-name {
-  font-size: 18px;
-  -webkit-transform: translateY(20px) translateX(10px);
-          transform: translateY(20px) translateX(10px);
+  margin-top: 50px;
+  padding: 45px 25px;
   position: relative;
 }
 
-.sites .product-flex-section .card .product-name::after {
-  content: '';
-  display: block;
-  -webkit-transform: translateY(45px);
-          transform: translateY(45px);
-  width: 80%;
-  height: 3px;
-  background: #1cd31c;
-}
-
-.sites .product-flex-section .card .product-price {
-  font-size: 13px;
-  -webkit-transform: translateY(30px) translateX(10px);
-          transform: translateY(30px) translateX(10px);
-  position: relative;
-}
-
-.sites .product-flex-section .card .included {
-  width: 100%;
-  -webkit-transform: translateY(40px);
-          transform: translateY(40px);
-  padding: 10px;
-}
-
-.sites .product-flex-section .card .included ul {
-  overflow: hidden;
-  overflow-y: scroll;
-  height: 100px;
-  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, color-stop(60%, #000), to(transparent));
-  -webkit-mask-image: linear-gradient(180deg, #000 60%, transparent);
-}
-
-.sites .product-flex-section .card .included ul li {
-  opacity: 0.7;
-  margin: 0;
-  list-style: none;
-  font-size: 14px;
-}
-
-.sites .product-flex-section .card .included ul li::before {
-  content: "\2022";
-  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-  color: #1cd31c;
-  /* Change the color */
-  font-weight: bold;
-  /* If you want it to be bold */
-  display: inline-block;
-  /* Needed to add space between the bullet and the text */
-  width: 1em;
-  /* Also needed for space (tweak if needed) */
-}
-
-.sites .product-flex-section .card .product-actions {
-  -webkit-transform: translateY(10px) translateX(120px);
-          transform: translateY(10px) translateX(120px);
-}
-
-.sites .product-flex-section .card .product-actions a {
-  color: #1cd31c;
-  font-size: 25px;
-}
-
-.contact-us-home {
-  background: rgba(0, 0, 0, 0.89);
-  width: 100%;
-  height: 500px;
-  text-align: left;
-}
-
-.contact-us-home h1 {
+.our-story .content .text h1 {
   color: white;
-  font-size: 18px;
-  padding-left: 10px;
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 15px;
 }
 
-.contact-us-home h1.heading {
-  font-size: 26px;
-}
-
-.contact-us-home a {
-  padding-left: 15px;
-}
-
-.contact-us-home a i {
-  -webkit-transform: translateY(10px) translateX(20px);
-          transform: translateY(10px) translateX(20px);
-  font-size: 18px;
+.our-story .content .text p {
   color: white;
+  font-weight: 600;
 }
 
 @media only screen and (min-device-width: 768px) {
