--- a/static/scss/global.scss
+++ b/static/scss/global.scss
@@ -180,6 +180,7 @@ body{
       img{
         height: auto;
         width: 110%;
+        max-width: 600px;
     }
   }
   }
@@ -525,4 +526,30 @@ body{
     width: 25px;
   }
 }
+}
+
+// // SMALL DESKTOP
+@media only screen and (min-device-width: 1024px) {
+  .cover{
+    height: 80vh;
+    .content{
+      display: flex;
+      .cover-section1{
+        width: 50%;
+      }
+      .cover-section2{
+        width: 50%;
+        .cover-image-div{
+          bottom: unset;
+          justify-content: left;
+          transform: translateX(20px);
+          img{
+            height: auto;
+            width: 110%;
+            max-width: 520px;
+        }
+      }
+      }
+    }
+  }
 }
