--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -5,7 +5,8 @@
   padding: 15px;
   background: #fafafa;
   position: relative;
-  padding-bottom: 70px;
+  padding-bottom: 35px;
+  padding-top: 20px;
 }
 
 #footer .footer-section {
@@ -20,10 +21,12 @@
 }
 
 #footer .footer-section .footer-ul h1 {
-  font-family: 'Lato', sans-serif;
-  color: black;
-  font-weight: 700;
-  font-size: 26px;
+  color: #183B56;
+  text-shadow: 1px 0 #183B56;
+  letter-spacing: 1px;
+  font-size: 22px;
+  font-weight: 800;
+  margin-bottom: 15px;
 }
 
 #footer .footer-section .footer-ul .footer-li {
@@ -31,16 +34,15 @@
 }
 
 #footer .footer-section .footer-ul .footer-li a {
-  font-family: 'Sniglet', cursive;
   display: inline-block;
-  width: 50%;
-  text-decoration: underline;
+  width: 100%;
   color: black;
   font-size: 14px;
   padding: 5px;
   opacity: 0.7;
   -webkit-transition: .3s;
   transition: .3s;
+  font-weight: 500;
 }
 
 #footer .footer-section .footer-ul .footer-li a:hover {
@@ -59,7 +61,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 10px;
+  margin-top: 0;
   margin-bottom: 10px;
   -webkit-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
@@ -90,17 +92,20 @@
 #footer .copyright {
   position: absolute;
   left: 0;
+  bottom: 0;
   width: 100%;
   height: auto;
   text-align: center;
+  background: #007be0;
+  padding: 6px;
 }
 
 #footer .copyright p {
   padding: auto;
   margin: auto;
-  color: black;
-  font-size: 12px;
-  font-weight: bold;
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 @media only screen and (min-device-width: 1024px) {
