--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -6,30 +6,32 @@
     padding: 15px;
     background: rgb(250, 250, 250);
     position: relative;
-    padding-bottom: 70px;
+    padding-bottom: 35px;
+    padding-top: 20px;
     .footer-section{
         display: flex;
         .footer-ul{
             width: 50%;
             text-align: center;
             h1{
-                font-family: 'Lato', sans-serif;
-                color: black;
-                font-weight: 700;
-                font-size: 26px;
+                color: #183B56;
+                text-shadow: 1px 0 #183B56;
+                letter-spacing:1px;    
+                font-size: 22px;
+                font-weight: 800;
+                margin-bottom: 15px;
             }
             .footer-li{
                 list-style: none;
                 a{
-                    font-family: 'Sniglet', cursive;
                     display: inline-block;
-                    width: 50%;
-                    text-decoration: underline;
+                    width: 100%;
                     color: black;
                     font-size: 14px;
                     padding: 5px;
                     opacity: 0.7;
                     transition: .3s;
+                    font-weight: 500;
                     &:hover{
                         opacity: 1;
                     }
@@ -43,7 +45,7 @@
         height: auto;
         justify-content: center;
         align-items: center;
-        margin-top: 10px;
+        margin-top: 0;
         margin-bottom: 10px;
         transition: .3s ease-in-out;
         &::after{
@@ -68,15 +70,18 @@
     .copyright{
         position: absolute;
         left: 0;
+        bottom: 0;
         width: 100%;
         height: auto;
         text-align: center;
+        background: #007be0;
+        padding: 6px;
         p{
             padding: auto;
             margin: auto;
-            color: black;
-            font-size: 12px;
-            font-weight: bold;
+            color: white;
+            font-size: 14px;
+            font-weight: 600;
         }
     }
 }
