--- a/static/scss/store/order.scss
+++ b/static/scss/store/order.scss
@@ -1,24 +1,11 @@
 $loader: rgb(80, 104, 180);
-$input: rgb(60, 84, 160);
+$input: #007be0;
 
 // STANDARD PHONE
-.bottom-nav{
-  display: none !important;
-}
-#footer{
-  padding-bottom: 0 !important;
-}
+
 // COVER
 .cover{
-  width: 100%;
-  height: auto;
-  position: relative;
-  img{
-    width: 100%;
-    height: 400px;
-    object-fit: cover;
-    filter: brightness(50%);
-  }
+  height: 55vh;
 }  
 .make-order{
     width: 100%;
@@ -51,7 +38,6 @@ $input: rgb(60, 84, 160);
                 margin-bottom: 15px;
                 margin-top: 10px;
                 width: 100%;
-                font-family: 'Sniglet', cursive;
                 color: black;
                 font-weight: bold;
                 font-size: 26px;
@@ -153,7 +139,7 @@ $input: rgb(60, 84, 160);
             .product-price{
               position: absolute;
               right: 40px;
-              transform: translateY(-32px);
+              transform: translateY(-38px) translateX(-10px);
               font-size: 14px;
               color: rgb(60, 84, 160);
               opacity: 0.7;
@@ -161,7 +147,7 @@ $input: rgb(60, 84, 160);
             .hosting-price{
               position: absolute;
               right: 40px;
-              transform: translateY(-32px);
+              transform: translateY(-38px) translateX(-10px);
               font-size: 14px;
               color: rgb(60, 84, 160);
               opacity: 0.7;
@@ -196,7 +182,6 @@ $input: rgb(60, 84, 160);
                 margin-bottom: 20px;
                 margin-top: 20px;
                 width: 230px;
-                font-family: 'Sniglet', cursive;
                 color: black;
                 font-size: 24px;
                 border: .5px solid rgba(209, 209, 209, 0.397);
@@ -232,7 +217,6 @@ $input: rgb(60, 84, 160);
                 margin-bottom: 20px;
                 margin-top: 20px;
                 width: 230px;
-                font-family: 'Sniglet', cursive;
                 color: black;
                 font-size: 24px;
                 border: .5px solid rgba(209, 209, 209, 0.397);
@@ -268,7 +252,6 @@ $input: rgb(60, 84, 160);
                 margin-bottom: 20px;
                 margin-top: 20px;
                 width: 230px;
-                font-family: 'Sniglet', cursive;
                 color: black;
                 font-size: 24px;
                 border: .5px solid rgba(209, 209, 209, 0.397);
@@ -286,8 +269,8 @@ $input: rgb(60, 84, 160);
               position: absolute;
               right: 2px;
               background: $input;
-              padding: 7px;
-              transform: translateY(-39px);
+              padding: 12px;
+              transform: translateY(-50px);
               border-radius: 0;
               i{
                 font-size: 20px;
@@ -302,7 +285,7 @@ $input: rgb(60, 84, 160);
               width: 100%;
               border: 2px solid $input;
               border-radius: 4px;
-              padding: 7px;
+              padding: 12px;
               outline: none;
               font-size: 15px;   
               background: white;
@@ -310,7 +293,7 @@ $input: rgb(60, 84, 160);
                 padding: 20px;
               }
               &.order-products{
-                padding: 7px;
+                padding: 17px;
               }
               &.order-hosting{
                 padding: 7px;
@@ -331,7 +314,6 @@ $input: rgb(60, 84, 160);
                 margin-bottom: 15px;
                 margin-top: 10px;
                 width: 100%;
-                font-family: 'Sniglet', cursive;
                 color: black;
                 font-weight: bold;
                 font-size: 26px;
